[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/Betting/Betting.gd" type="Script" id=1]
[ext_resource path="res://UI/Betting/Down Button.png" type="Texture" id=2]
[ext_resource path="res://UI/Betting/Up Button.png" type="Texture" id=3]
[ext_resource path="res://UI/Fonts/PressStart2P.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/Fonts/Font-20.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/Betting/Background.png" type="Texture" id=6]
[ext_resource path="res://UI/Betting/Question Mark.png" type="Texture" id=7]
[ext_resource path="res://UI/Betting/Start Button.png" type="Texture" id=8]
[ext_resource path="res://UI/Betting/Invalid Bet.wav" type="AudioStream" id=9]
[ext_resource path="res://UI/Betting/Button Press.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/MarginContainer/VBoxContainer/VBoxContainer2/CenterContainer/Bet Amount:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Betting" type="MarginContainer"]
margin_right = 108.0
margin_bottom = 661.0
size_flags_horizontal = 3
size_flags_vertical = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
margin_right = 108.0
margin_bottom = 661.0
texture = ExtResource( 6 )
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 108.0
margin_bottom = 661.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_right = 108.0
margin_bottom = 661.0
custom_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
margin_top = 8.0
margin_right = 108.0
margin_bottom = 661.0
custom_constants/separation = 25

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_right = 108.0
margin_bottom = 118.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 108.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_colors/font_color_shadow = Color( 0.360784, 0.360784, 0.360784, 0.376471 )
text = "Start"
align = 1

[node name="Start" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 108.0
margin_bottom = 118.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 8 )
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 108.0
margin_bottom = 241.0
custom_constants/separation = 1

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 108.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_colors/font_color_shadow = Color( 0.360784, 0.360784, 0.360784, 0.376471 )
text = "Bet
Amount"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 108.0
margin_bottom = 98.0

[node name="Bet Amount" type="LineEdit" parent="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer2/CenterContainer"]
margin_left = 19.0
margin_right = 89.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_constants/minimum_spaces = -10
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="Invalid Bet" type="AudioStreamPlayer" parent="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer2/CenterContainer"]
stream = ExtResource( 9 )
volume_db = -35.0

[node name="Bet Up" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 108.0
margin_bottom = 368.0
focus_mode = 0
size_flags_horizontal = 13
size_flags_vertical = 13
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 393.0
margin_right = 108.0
margin_bottom = 429.0

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
margin_right = 108.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_colors/font_color_shadow = Color( 0.360784, 0.360784, 0.360784, 0.376471 )
text = "Balance:"
align = 1

[node name="Balance" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
margin_top = 16.0
margin_right = 108.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_colors/font_color_shadow = Color( 0.360784, 0.360784, 0.360784, 0.376471 )
text = "$0"
align = 1
autowrap = true

[node name="Bet Down" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 454.0
margin_right = 108.0
margin_bottom = 556.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 581.0
margin_right = 108.0
margin_bottom = 653.0

[node name="Tutorial" type="TextureRect" parent="CenterContainer/MarginContainer/VBoxContainer/CenterContainer3"]
margin_left = 18.0
margin_right = 90.0
margin_bottom = 72.0
grow_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Invalid Bet" = SubResource( 5 )

[node name="Button Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -25.0
pitch_scale = 1.4
[connection signal="button_down" from="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_button_down"]
[connection signal="mouse_entered" from="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_mouse_exited"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="text_changed" from="CenterContainer/MarginContainer/VBoxContainer/VBoxContainer2/CenterContainer/Bet Amount" to="." method="_on_Bet_Amount_text_changed"]
[connection signal="button_down" from="CenterContainer/MarginContainer/VBoxContainer/Bet Up" to="." method="_on_Bet_Up_button_down"]
[connection signal="button_up" from="CenterContainer/MarginContainer/VBoxContainer/Bet Up" to="." method="_on_Bet_Up_button_up"]
[connection signal="mouse_entered" from="CenterContainer/MarginContainer/VBoxContainer/Bet Up" to="." method="_on_Bet_Up_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/MarginContainer/VBoxContainer/Bet Up" to="." method="_on_Bet_Up_mouse_exited"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Bet Up" to="." method="_on_Bet_Up_pressed"]
[connection signal="button_down" from="CenterContainer/MarginContainer/VBoxContainer/Bet Down" to="." method="_on_Bet_Down_button_down"]
[connection signal="button_up" from="CenterContainer/MarginContainer/VBoxContainer/Bet Down" to="." method="_on_Bet_Down_button_up"]
[connection signal="mouse_entered" from="CenterContainer/MarginContainer/VBoxContainer/Bet Down" to="." method="_on_Bet_Down_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/MarginContainer/VBoxContainer/Bet Down" to="." method="_on_Bet_Down_mouse_exited"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Bet Down" to="." method="_on_Bet_Down_pressed"]
[connection signal="mouse_entered" from="CenterContainer/MarginContainer/VBoxContainer/CenterContainer3/Tutorial" to="." method="_on_Tutorial_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/MarginContainer/VBoxContainer/CenterContainer3/Tutorial" to="." method="_on_Tutorial_mouse_exited"]
